{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 112,
  "lineage": "39a14ea6-7a3e-c24b-a5af-ba75bba79fc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:834939192351:internet-gateway/igw-0bf58b44f22b50ba5",
            "id": "igw-0bf58b44f22b50ba5",
            "owner_id": "834939192351",
            "region": "ap-northeast-1",
            "vpc_id": "vpc-087bb28f46557d335"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bf58b44f22b50ba5",
            "id": "r-rtb-0aff759d2d48fc1f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0aff759d2d48fc1f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.example_gateway",
            "aws_route_table.example_route_table",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:834939192351:route-table/rtb-0aff759d2d48fc1f3",
            "id": "rtb-0aff759d2d48fc1f3",
            "owner_id": "834939192351",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087bb28f46557d335"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:834939192351:route-table/rtb-05ab43e93b6f00eba",
            "id": "rtb-05ab43e93b6f00eba",
            "owner_id": "834939192351",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087bb28f46557d335"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd863eb272c0027",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05ab43e93b6f00eba",
            "subnet_id": "subnet-0f70cd0575b676e8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fc70311a1afe248",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0aff759d2d48fc1f3",
            "subnet_id": "subnet-066edb65ec197d3d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.example_route_table",
            "aws_subnet.public",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:834939192351:subnet/subnet-0f70cd0575b676e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f70cd0575b676e8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834939192351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "vpc_id": "vpc-087bb28f46557d335"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "834939192351",
            "id": "subnet-0f70cd0575b676e8a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:834939192351:subnet/subnet-066edb65ec197d3d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066edb65ec197d3d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "834939192351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "vpc_id": "vpc-087bb28f46557d335"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "834939192351",
            "id": "subnet-066edb65ec197d3d9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:834939192351:vpc/vpc-087bb28f46557d335",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca6ae15cc0efe178",
            "default_route_table_id": "rtb-0d95904c370ef2571",
            "default_security_group_id": "sg-0748f1ba97b134a21",
            "dhcp_options_id": "dopt-046f4a4c0eaa20f07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-087bb28f46557d335",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d95904c370ef2571",
            "owner_id": "834939192351",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "example_vpc"
            },
            "tags_all": {
              "Name": "example_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}